[metadata]
name = pbreak
version = 0.1.0
description = Simple password breaker server created as example for distributed processing.
long_description = file: README.md

[options]
packages = find:
scripts =
    scripts/to_sha256_hexdigest.py
    scripts/plot_qos.py
    scripts/plot_throughput.py
    scripts/throughput.py

[options.entry_points]
console_scripts =
    undigest-server = undigest.rpc_server:main
